# Clara

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Clara.py  Clara.sublime-project  Clara.sublime-settings  ClaraInsertDiagnosis.py  ClaraViewListener.py  CodeCompleteAtCursorCommand.py  DiagnosticConsumer.py  EventListener.py  GenerateSystemHeadersCommand.py  LICENSE.md  Main.sublime-menu  README.md  ViewEventListener.py  install.py  repository.json  sublime-ide.sublime-project  test.py
CMakeModules/: FindClang.cmake  FindLLVM.cmake  FindPython3.cmake  TargetSetRTTI.cmake
deploy/: CMakeLists.txt  Deploy.cmake  GitHubRelease.cmake  GitUtilities.cmake  RemovePythonCaches.cmake  update-repository.py
deploy/messages/: 0.2.0.txt  0.3.0.txt
include/: CMakeLists.txt  CancelException.hpp  CancellableASTConsumer.hpp  CancellableSyntaxOnlyAction.hpp  CodeCompleteConsumer.hpp  CodeCompleter.hpp  CompilationDatabase.hpp  CompilationDatabaseWatcher.hpp  CompletionResultListToPythonList.hpp  Configuration.hpp.in  CustomCodeCompleteConsumer.hpp  DiagnosticConsumer.hpp  HeaderListToPythonList.hpp  Precompiled.hpp  Project.hpp  PyBind11.hpp  PythonGILEnsurer.hpp  RegionClassifierConsumer.hpp  RegionClassifierVisitor.hpp  RenameFunctionASTConsumer.hpp  RenameFunctionFrontendAction.hpp  RenameFunctionFrontendActionFactory.hpp  RenameFunctionVisitor.hpp  Session.hpp  SessionOptions.hpp  StringException.hpp  claraPrint.hpp
lib/: CMakeLists.txt  CancellableASTConsumer.cpp  CancellableSyntaxOnlyAction.cpp  CodeCompleteConsumer.cpp  CodeCompleter.cpp  CompilationDatabase.cpp  CompilationDatabaseWatcher.cpp  CompletionResultListToPythonList.cpp  Configuration.hpp.in  CustomCodeCompleteConsumer.cpp  DiagnosticConsumer.cpp  Project.cpp  PythonBindings.cpp  PythonBindings2.cpp  PythonGILEnsurer.cpp  RegionClassifierConsumer.cpp  RegionClassifierVisitor.cpp  RenameFunctionASTConsumer.cpp  RenameFunctionFrontendAction.cpp  RenameFunctionFrontendActionFactory.cpp  RenameFunctionVisitor.cpp  Session.cpp  SessionOptions.cpp  main.cpp
lib/cmake/modules/: FindClang.cmake  FindPython3.cmake  TargetSetRTTI.cmake
plugin/: C++.sublime-settings  C.sublime-settings  CMakeLists.txt  Clara.sublime-commands  Clara.sublime-settings  ClaraCreateAutoCompleteTriggersCommand.py  ClaraGenerateSystemHeadersCommand.py  ClaraInsertDiagnosis.py  Context.sublime-menu  DiagnoseCommand.py  DiagnosticConsumer.py  DiagnosticPrinter.py  EventListener.py  GenerateSystemHeadersCommand.py  InsertDiagnosis.py  Main.sublime-menu  OpenClaraSettingsCommand.py  ViewEventListener.py  __init__.py.in  test.py
plugin/commands/: __init__.py  create_auto_complete_triggers.py  diagnose.py  generate_system_headers.py  insert_diagnosis.py  open_settings.py  write_auto_complete_triggers.py  write_system_headers.py
plugin/eventlisteners/: __init__.py  code_completer.py  compilation_database_watcher.py
plugin/utils/: FileBufferData.py  Functions.py  Globals.py  ProgressIndicator.py  ViewData.py
src/: ExampleASTConsumer.cpp  ExampleASTConsumer.hpp  ExampleFrontendAction.cpp  ExampleFrontendAction.hpp  ExampleFrontendActionFactory.cpp  ExampleFrontendActionFactory.hpp  ExampleVisitor.cpp  ExampleVisitor.hpp  main.cpp
test/: 1.cpp  CMakeLists.txt  hello.cpp  run.py  test.py  test1.cpp  test2.cpp
